manifests/nats-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: todo
  labels:
    component: nats
spec:
  selector:
    app: nats
  clusterIP: None
  ports:
  - name: client
    port: 4222
  - name: cluster
    port: 6222
  - name: monitor
    port: 8222
